dokuwiki/dokuwiki-service-lb.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: dokuwiki
  namespace: dokuwiki
  labels:
    name: dokuwiki
    app: dokuwiki-app
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: dokuwiki-deploy
    app: dokuwiki-app
