dokuwiki/dokuwiki-httproute-traefik.yaml
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dokuwiki-https
  namespace: dokuwiki
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: websecure
      kind: Gateway
  hostnames:
    - "dokuwiki.ostack.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dokuwiki
          namespace: dokuwiki
          port: 8080
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: dashboard-auth
